--- a/past-teams/team-2018.mdx
+++ b/past-teams/team-2018.mdx
@@ -1,9 +1,9 @@
 # Team Slovenia 2018
 Jernej Macarol Možina, Luka Maček, Kristina Kit, Nail Kuduzović, Lara Erzin, Mark Breznik 
 
-Matevž Zorec, David Kraševec, Matej Šajn, Andrei Morozov
+ David Kraševec, Matej Šajn, Andrei Morozov
 
 ---
-==MENTORJI==
+Matevž Zorec, ==MENTORJI==
 
 ![Team 2018 photo](img/2018.jpg)
